@@ -14,6 +14,9 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+CRE: display actual item values for artifacts, as suggested by Leaf.
+Nicolas Weeger 2010-06-20
+
 CRE: add 'exit' command, add status bar tips to menu commands.
 Nicolas Weeger 2010-06-20
 
